2006-12-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/result.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/pipeline.cxx,
 src/result.cxx, src/util.cxx:
  - result::swap() didn't swap protocol fields
  - Keep shared result data (apart from PGresult) in new "shared_data" object
  - Early provision for thread synchronization in result
  - Results remember the queries that yielded them
  - result::CheckStatus() no longer takes argument (no longer need 2 versions)
  - Radically changed result class definition
 test/test070.cxx:
  - Test new result::query()
2006-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/except.hxx:
  - Documented SIGPIPE when connection breaks, thanks Leandro Lucarella
  - More grouping in connection documentation
 include/pqxx/connection.hxx:
  - Fleshed out "connections" documentation module
 test/test056.cxx:
  - Expected exception type is sql_error if PQresultErrorField() not available
 test/test091.cxx:
  - Don't test full cursor mobility on backend <= 7.3 (just wouldn't work)
2006-11-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Try for automake 1.9
  - Minor cleanup
 test/test056.cxx, test/test091.cxx:
  - Fail with postgres/libpq 7.3
 tools/preprelease:
  - Suppress a bit of unwanted output
2006-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Add trigger even if connection not open, thanks Markus Schmidleitner
2006-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Published some more utility classes from pqxx::internal
 src/util.cxx:
  - Don't allocate 5n+1 bytes for escaping; 2n+1 really is enough
 test/test005.cxx, test/test013.cxx, test/test018.cxx, test/test032.cxx,
 test/test056.cxx, test/test060.cxx, test/test061.cxx, test/test064.cxx,
 test/test070.cxx, test/test072.cxx, test/test073.cxx, test/test083.cxx,
 test/test085.cxx, test/test086.cxx: